bases/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cygnus-homer-deployment
  labels:
    app.kubernetes.io/component: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
    spec:
      containers:
      - name: frontend
        image: b4bz/homer:latest
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
        lifecycle:
          postStart:
            exec:
              command: ["/bin/cp", "/usr/share/homer/config/config.yml", "/www/config.yml"]
        volumeMounts:
          - mountPath: /usr/share/homer/config
            name: config
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: config
            optional: false
