bases/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cygnus-homer-service
  labels:
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/component: frontend
  ports:
  - port: 80
    name: http
    targetPort: 8080
