bases/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cygnus-homer-ingress
  annotations:
    cert-manager.io/cluster-issuer: tls-issuer
spec:
  tls:
    - hosts: [dashboard.ldaws.net]
      secretName: cygnus-homer-ingress
  rules:
  - host: dashboard.ldaws.net
    http:
      paths:
      - path: /
        backend:
          serviceName: cygnus-homer-service
          servicePort: http
